--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/http-client": "^6.3",
         "symfony/dom-crawler": "^6.3",
         "symfony/framework-bundle": "^6.3",
-        "symfony/css-selector": "^6.3"
+        "symfony/css-selector": "^6.3",
+        "symfony/validator": "^6.3"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^6.3"
