--- a/composer.json
+++ b/composer.json
@@ -15,17 +15,17 @@
     },
     "require": {
         "php": "^8.2",
-        "symfony/config": "^6.3|^7.0",
-        "symfony/dependency-injection": "^6.3|^7.0",
-        "symfony/http-kernel": "^6.3|^7.0",
-        "symfony/http-client": "^6.3|^7.0",
-        "symfony/dom-crawler": "^6.3|^7.0",
-        "symfony/framework-bundle": "^6.3|^7.0",
-        "symfony/css-selector": "^6.3|^7.0",
-        "symfony/validator": "^6.3|^7.0",
-        "symfony/intl": "^6.3|^7.0"
+        "symfony/config": "^7.0",
+        "symfony/dependency-injection": "^7.0",
+        "symfony/http-kernel": "^7.0",
+        "symfony/http-client": "^7.0",
+        "symfony/dom-crawler": "^7.0",
+        "symfony/framework-bundle": "^7.0",
+        "symfony/css-selector": "^7.0",
+        "symfony/validator": "^7.0",
+        "symfony/intl": "^7.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^6.3|^7.0"
+        "phpunit/phpunit": "^10"
     }
 }
